--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'This action will send a notification to Slack'
 author: 'rtCamp'
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/rtcamp/action-slack-notify:v2.2.0'
+  image: 'docker://docker.io/191163/slack-notify:v2.2.2'
 branding:
   icon: 'bell'
   color: 'yellow'
